AUTOMAKE_OPTIONS=dejagnu
DEJATOOL=conv_encoding conv_kana strwidth strcut
RUNTESTDEFAULTFLAGS=--tool $$tool --srcdir "$$srcdir"/tests
LANG=C
EXTRA_DIST=AUTHORS DISCLAIMER LICENSE Makefile.bcc32 \
	config.h.bcc32 config.h.vc6 \
	libmbfl.dsp libmbfl.dsw libmbfl.sln libmbfl.vcproj mbfl.rc \
	mksbcc32.bat rules.mak.bcc32
SUBDIRS = nls filters mbfl tests
