# Process this file with autoconf to produce a configure script.
AC_INIT(mbfl/mbfilter.c)
AM_INIT_AUTOMAKE(libmbfl, 1.0.2)
AC_CONFIG_SRCDIR(mbfl/mbfilter.c)
AM_CONFIG_HEADER(config.h)

# SHLIB isn't a version number but the API reference
# Read http://www.gnu.org/software/libtool/manual/libtool.html#Updating-version-info
SHLIB_VERSION="1:1:0"
AC_SUBST(SHLIB_VERSION)

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h stddef.h assert.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([strcasecmp strchr])

AC_CHECK_PROGS([FETCH_VIA_FTP], [wget curl ncftpget])

if test "$FETCH_VIA_FTP" = "curl"; then
  FETCH_VIA_FTP="curl -O"
fi

AC_CONFIG_FILES([
  Makefile
  mbfl/Makefile
  filters/Makefile
  nls/Makefile
  tests/Makefile
  tests/conv_encoding.tests/Makefile
  tests/conv_kana.tests/Makefile
  tests/strwidth.tests/Makefile
  tests/strcut.tests/Makefile])
AC_OUTPUT
