dnl vim:ts=2:sw=2:et:
AC_INIT(Makefile.in)

XSLTPROC=xsltproc
GTAR=gtar
TAR=tar
SED=sed
GSED=gsed
BASH=bash
AWK=awk

AC_PATH_PROG(AWK, $AWK)
AC_PATH_PROG(GAWK, gawk)
AC_PATH_PROG(NAWK, nawk)
AC_PATH_PROG(GTAR, $GTAR)
AC_PATH_PROG(GSED, $GSED)
AC_PATH_PROG(BASH, $BASH)

AC_ARG_WITH(xsltproc, [  --with-xsltproc  Where to find xsltproc],
  [
    if test "x$withval" != "xno"; then
      XSLTPROC="$withval"
    fi
  ]
)
AC_PATH_PROG(XSLTPROC,  $XSLTPROC)

if test -x "$GTAR" ; then
  TAR=$GTAR
fi
if test -x "$GSED" ; then
  SED=$GSED
fi
if test -x "$GAWK" ; then
  AWK=$GAWK
else
  if test -x "$NAWK" ; then
    AWK=$NAWK
  fi
fi

GMAKE=make
case `uname -s` in
  SunOS)
    GMAKE=gmake
    ;;
esac
AC_SUBST(GMAKE)

AC_SUBST(TAR)
AC_SUBST(SED)
AC_SUBST(BASH)
AC_SUBST(AWK)

AC_SUBST(XINC)
AC_SUBST(XEP)
AC_SUBST(FOP)
AC_SUBST(XSLTPROC)
AC_SUBST(DBDOCLET)
HERE=`pwd`
AC_SUBST(HERE)
AC_OUTPUT(Makefile)

cat > config.nice <<EOT
#!/bin/sh
./configure \
    --with-xsltproc='$XSLTPROC'
EOT
chmod +x config.nice

